# WiseExplorer

./: .gitignore  LICENSE  README.md  main.py  memory.db  pyproject.toml  pytest.ini  run_wise_explorer.py  test_canonicalizer.py
agent/: agent.py
games/: game_base.py  game_rules.py  game_state.py  minichess.py  tic_tac_toe.py
omnicron/: db_models.py  debug_viz.py  helpers.py  main.py  manager.py  serializers.py  state_canonicalizer.py
omnicron/game_memory/: memory.db
omnicron/game_memory/games/tic_tac_toe/: plays.parquet
simulation/: simulation.py
src/wise_explorer/: __init__.py  api.py  cli.py
src/wise_explorer/agent/: __init__.py  agent.py
src/wise_explorer/core/: __init__.py  bayes.py  hashing.py  types.py
src/wise_explorer/debug/: __init__.py  profiler.py  viz.py
src/wise_explorer/games/: __init__.py  game_base.py  game_rules.py  game_state.py  minichess.py  tic_tac_toe.py
src/wise_explorer/memory/: __init__.py  anchor_manager.py  game_memory.py  markov_memory.py  schema.py  transition_memory.py
src/wise_explorer/scripts/: benchmarks.py
src/wise_explorer/selection/: __init__.py  inference.py  training.py
src/wise_explorer/simulation/: __init__.py  jobs.py  runner.py  training.py  worker.py
src/wise_explorer/utils/: config.py  factory.py
test_agent/: test_agent.py
test_games/: test_game_rules.py  test_game_state.py  test_tic_tac_toe.py
test_omnicron/: test_manager.py
test_simulation/: test_simulation.py
tests/: conftest.py
tests/agent/: test_agent.py
tests/core/: test_bayes.py  test_hashing.py  test_types.py
tests/games/: test_minichess.py  test_tic_tac_toe.py
tests/memory/: test_anchor_manager.py  test_game_memory.py  test_schema.py
tests/selection/: test_inference.py  test_training.py
tests/simulations/: test_jobs.py  test_runner.py  test_training_sim.py  test_worker.py
tests/utils/: test_config.py  test_factory.py
utils/: global_variables.py
wise_explorer/: wise_explorer_algorithm.py
