[project]
name = "wise-explorer"
version = "0.1.0"
description = "Pattern-based learning model for General Game Playing"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Mathewe Banda" },
]
keywords = ["game-ai", "machine-learning", "reinforcement-learning", "board-games", "general-game-playing", "mcts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/MatheweB/WiseExplorer"
Repository = "https://github.com/MatheweB/WiseExplorer"
Issues = "https://github.com/MatheweB/WiseExplorer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnicron", "simulation", "agent", "games", "wise_explorer", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[project.scripts]
wise-explorer = "run_wise_explorer:main"