[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wise-explorer"
version = "1.0.0"
description = "Pattern-based game AI using Monte Carlo Simulations, Nash Equilibria Convergence, and Bayes factor clustering"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24.0"]
authors = [
    { name = "Mathewe Banda" },
]
keywords = ["general-game-playing", "interpretable-ai", "general-ai", "mcts", "reinforcement-learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/MatheweB/WiseExplorer"
Repository = "https://github.com/MatheweB/WiseExplorer"
Issues = "https://github.com/MatheweB/WiseExplorer/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
wise-explorer = "wise_explorer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wise_explorer"]

[tool.pytest.ini_options]
testpaths = ["./tests"]


